<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">Click here</string>
    <string name="lab2_title">Lab 2 GUI</string>
    <string name="check_box">Check this out</string>
    <string name="switch_onoff">Switch on / off</string>
    <string name="toast_message">Here is more information</string>
    <string name="hint_message">Enter name here</string>
    <string name="snack_bar">The switch is now</string>
    <string name="undo_label">Undo</string>
    <string name="lab3mainactivity">Main Activity</string>
    <string name="lab3emailhint">Enter your email</string>
    <string name="lab3passwordhint">Enter your password</string>
    <string name="lab3buttontext">Login</string>
    <string name="lab3profileactivity">Profile Activity</string>
    <string name="lab3enteremailhint">Enter your email</string>
    <string name="lab3entername">Enter your name</string>
    <string name="lab3takepicture">Take picture</string>
</resources>