<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/lab2_title"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:onClick="toast_message"
        android:orientation="horizontal"
        android:text="@string/ButtonText" />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:orientation="horizontal"
        android:text="@string/check_box" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal" >
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="TODO"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="201dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:checked="true"
        android:gravity="fill"
        android:text="@string/switch_onoff" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/hint_message"
        android:inputType="textPersonName" />

</LinearLayout>