<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="38dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="32dp"
        android:text="@string/lab2_title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="TODO"
        android:gravity="fill"
        android:src="@drawable/flag"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="36dp"
        android:text="@string/ButtonText"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="28dp"
        android:text="@string/switch_onoff"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/hint_message"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>